fixed height to prevent input overflowing outside of form

--- a/client/src/components/CalculationForms/Form.module.css
+++ b/client/src/components/CalculationForms/Form.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  height: 50vh;
+  min-height: 50vh;
   width: 350px;
   border: 1px solid lightgray;
   border-radius: 5px;
@@ -49,7 +49,7 @@
   border-radius: 3px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   padding: 10px 10px;
-  margin: 10px 0;
+  margin: 10px 0 20px;
 }
 
 .button:hover {
